feat: timeout command.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
     "prefix": "-",
-    "moderatorRole": "813315876090019881"
+    "moderatorRole": "813315876090019881",
+    "botID": "1032603328338726992"
 }
