--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ascii-table": "^0.0.9",
     "discord.js": "^14.6.0",
     "glob": "^8.0.3",
-    "mongoose": "^6.6.7"
+    "mongoose": "^6.6.7",
+    "ms": "^2.1.3"
   }
 }
