--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glob": "^8.0.3",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.6.7",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "tesseract.js": "^3.0.3"
   }
 }
